# Anima-Public

Anima/cmake/: ANIMAExports.cmake.in
Anima/diffusion/fibers_analysis/: CMakeLists.txt  animaFiberBundlePointwiseUnbalancedOptimalTransport.cxx  animaFiberBundlePointwiseUnbalancedOptimalTransport.h  animaFiberBundleUnbalancedOptimalTransport.cxx  animaFiberBundleUnbalancedOptimalTransport.h  animaSingleFiberUnbalancedOptimalTransport.cxx  animaSingleFiberUnbalancedOptimalTransport.h
Anima/diffusion/fibers_analysis/fibers_wasserstein_distance/: CMakeLists.txt  animaFibersWassersteinDistance.cxx
Anima/diffusion/mcm/: animaGaussianMCMCost.cxx  animaGaussianMCMCost.h  animaGaussianMCMVariableProjectionCost.cxx  animaStickCompartment.cxx  animaStickCompartment.h  animaTensorCompartment.cxx  animaTensorCompartment.h  animaZeppelinCompartment.cxx  animaZeppelinCompartment.h
Anima/diffusion/mcm_estimator/: animaMCMEstimator.cxx  animaMCMEstimatorImageFilter.h  animaMCMEstimatorImageFilter.hxx
Anima/diffusion/tractography/: CMakeLists.txt  animaBaseParticleFilteringTractographyImageFilter.h  animaBaseParticleFilteringTractographyImageFilter.hxx  animaBaseProbabilisticTractographyImageFilter.h  animaBaseProbabilisticTractographyImageFilter.hxx  animaBaseTractographyImageFilter.cxx  animaBaseTractographyImageFilter.h  animaDTIParticleFilteringTractographyImageFilter.cxx  animaDTIParticleFilteringTractographyImageFilter.h  animaDTIProbabilisticTractographyImageFilter.cxx  animaDTITractographyImageFilter.cxx  animaDTITractographyImageFilter.h  animaMCMParticleFilteringTractographyImageFilter.cxx  animaMCMParticleFilteringTractographyImageFilter.h  animaODFParticleFilteringTractographyImageFilter.cxx  animaODFParticleFilteringTractographyImageFilter.h  animaODFProbabilisticTractographyImageFilter.cxx  animaODFProbabilisticTractographyImageFilter.h
Anima/filtering/: CMakeLists.txt
Anima/filtering/denoising/: CMakeLists.txt
Anima/filtering/nyul_standardization/: animaNyulStandardization.cxx
Anima/filtering/patch_tools/: CMakeLists.txt
Anima/filtering/structure_tensor_image/: CMakeLists.txt  animaStructureTensorImage.cxx  animaStructureTensorImageFilter.h  animaStructureTensorImageFilter.hxx
Anima/math-tools/clustering/: animaFuzzyCMeansFilter.h  animaFuzzyCMeansFilter.hxx  animaSpectralClusteringFilter.hxx
Anima/quantitative-mri/: CMakeLists.txt
Anima/segmentation/: CMakeLists.txt
(+82 files in other folders)
